Halved the max concentration of the transcription factors on the 2nd tab.
Set model-view transform for 2nd tab to be slightly more zoomed out.
Changed the random 1D walk on the DNA for the transcription factors to stay a bit longer and detach more consistently.
Changed the random 1D walk on the DNA for RNA polymerase to stay a bit longer and detach more consistently.
Changed the default velocity of the motion when molecules and connecting with one another to be slower in order to look more natural.
Fixed gene labels to start at 1 instead of 0.
Made Reset All button not visible when zoomed out.
Set to be initially zoomed out on first tab.
# 0.00.17 (62049) Mar 1, 2012
3/1/12 Deploying to dev for review with consulting biologist.
Got Reset All working on 2nd tab.
Fixed issues with the motion bounds on the 2nd tab so that mRNA can be produced without getting stuck in the corner.
# 0.00.16 (61742) Feb 24, 2012
2/24/12 Publishing version to dev for possible demo
Added most of the user interface for the 2nd tab.
Made the molecules that don't directly interact with the DNA stay above it when doing random walk.  This should serve to prevent some confusion about what is interacting with the DNA.
Added label for mRNA that fades in during synthesis and out when synthesis is complete.
Fixed an issue where polymerase could attach to DNA in locations that overlapped with transcription factors.
Made the node for the grabbed biomolecule always move to the top of the z-order for its layer.
Added support for multiple positive transcription factors per gene, added to gene 2 only so far.
Made the positive and negative transcription factors offset somewhat so they aren't right on top of each other (requested by MK).
3rd tab: Adjusted the range of the graph, the parameter ranges, and the default values in order to make the "noisy" nature of the single cell more apparent and yet still stay on the graph when all values are maxed out.