@@ -78,6 +78,7 @@ public class TranscriptionFactorAttachmentStateMachine extends GenericAttachment
                     asm.setState( unattachedButUnavailableState );
                     biomolecule.setMotionStrategy( new WanderInGeneralDirectionMotionStrategy( new ImmutableVector2D( 0, 1 ), biomolecule.motionBoundsProperty ) );
                     detachFromDnaThreshold = 1; // Reset this threshold.
+                    asm.biomolecule.attachedToDna.set( false ); // Update externally visible state indication.
                 }
                 else {
                     // Attach to an adjacent base pair.  First, shuffle the
